fix: dark squares a bit too dark

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ td {
 }
 
 .cell-black {
-    background-color: #555;
+    background-color: #888;
 }
 .cell-white {
     background-color: #dadada;
